--- a/README
+++ b/README
@@ -19,4 +19,4 @@
         
 		python app.py
       
-	  4. Review reports: good.txt and bad.txt, including detailed info.
+	  4. Review reports: good.md and bad.md for detailed info.
